// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipIcon renders inverse trigger icon 1`] = `
<span
  className="ds-c-tooltip-icon__container"
>
  <InfoCircleIconThin
    className="ds-c-tooltip-icon ds-c-tooltip-icon--inverse"
    title="Information"
    viewBox="0 0 16 16"
  />
</span>
`;

exports[`TooltipIcon renders normal trigger icon 1`] = `
<span
  className="ds-c-tooltip-icon__container"
>
  <InfoCircleIconThin
    className="ds-c-tooltip-icon"
    title="Information"
    viewBox="0 0 16 16"
  />
</span>
`;
